spade-tests/src/snapshots/spade_tests__ast_lowering__unused_attribute_errors_on_entity.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[uwu]
entity a() -> bool {true}


error: Unrecognised attribute
  ┌─ testinput:1:1
  │
1 │ #[uwu]
  │ ^^^^^^ Unrecognised attribute


